@@ -124,6 +124,11 @@ New Features
 * LUCENE-7855: Added advanced options of the Wikipedia tokenizer to its factory.
   (Juan Pedro via Adrien Grand)
 
+Bug Fixes
+
+* LUCENE-7864: IndexMergeTool is not using intermediate hard links (even 
+  if possible). (Dawid Weiss)
+
 Other
 
 * LUCENE-7800: Remove code that potentially rethrows checked exceptions 
